[package]
name = "cloud9-core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[lints]
workspace = true

[dependencies]
arcstr = { workspace = true }
fs-err = { workspace = true }
miette = { workspace = true }
textwrap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[target.'cfg(loom)'.dependencies]
loom = { workspace = true }

[dev-dependencies]
loom = { workspace = true }

[features]
default = []
